Revert "Revert "Signed-off-by: Arlan95220 <zx24969557@gmail.com>""
This reverts commit f588593b222aea268ee7d355b345c7e8f7cc8c1c.

Signed-off-by: Arlan95220 <zx24969557@gmail.com>

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
 <title>MyResume </title>
 <link rel="stylesheet" type="text/css" href="css/index.css">
+
+
+	<meta charset="utf-8">
 <script src="js/index.js"></script>
 </head>
 <body>
@@ -70,24 +73,21 @@ Python<div class="square1"><div class="square14"></div></div>
 </div>
 </div>
 </div>
+<br><br><br>
 <div id="c">
 <h3 style="margin-left:5vw;">經歷</h3>
 <div class="timearea">
 <div class="time1">
-<span class="when">大一上</span><br><br>
+<h4 class="when">大一上</h4>
 管理學<br>
-&nbsp;&nbsp;<span style="font-size:1.2vw;">兒童向程式教學成人班</span><br>
+<blockquote style="font-size:1.2vw;">兒童向程式教學</blockquote><br>
 </div>
 <div class="time2">
-<span class="when">大二上</span><br><br style="font-size:0.1vw;">
+<h4 class="when">大二上</h4>
 資料結構<br>
-&nbsp;&nbsp;<span style="font-size:1.2vw;">進出貨系統製作</span><br><br>
+<blockquote style="font-size:1.2vw;">進出貨系統製作</blockquote><br>
 購物網站<br>
-&nbsp;&nbsp;<span style="font-size:1.2vw;">網頁後端製作管理</span><br><br>
-中原報佳音天使班<br>
-&nbsp;&nbsp;<span style="font-size:1.2vw;">美術/隊輔</span><br><br>
-中原宗教研究所圖書館<br>
-&nbsp;&nbsp;<span style="font-size:1.2vw;">圖書管理</span><br>
+<blockquote style="font-size:1.2vw;">網頁後端製作管理</blockquote>
 </div>
 </div>
 <div style="height:2vw;">
@@ -103,23 +103,21 @@ Python<div class="square1"><div class="square14"></div></div>
 </div>
 <div class="timearea">
 <div class="time3">
-<span class="when">大一下</span><br><br style="font-size:0.1vw;">
+<h4 class="when">大一下</h4>
 企業概論<br>
-&nbsp;&nbsp;<span style="font-size:1.2vw;">黑孩子黑咖啡販售行銷</span><br><br>
+<blockquote style="font-size:1.2vw;">黑孩子黑咖啡販售行銷</blockquote><br>
 中原不塑之客兒童暑期營隊<br>
-&nbsp;&nbsp;<span style="font-size:1.2vw;">美術/機動組</span><br><br>
+<blockquote style="font-size:1.2vw;">美術/機動組</blockquote><br>
 Java專科優易獎<br>
 </div>
 <div class="time4">
-<span class="when">大二下</span><br><br style="font-size:0.1vw;">
+<h4 class="when">大二下</h4>
 天文社網站<br>
-&nbsp;&nbsp;<span style="font-size:1.2vw;">UI設計/網頁製作</span><br><br>
+<blockquote style="font-size:1.2vw;">UI設計/網頁製作</blockquote><br>
 個人網站<br>
-&nbsp;&nbsp;<span style="font-size:1.2vw;">製作</span><br><br>
+<blockquote style="font-size:1.2vw;">製作</blockquote><br>
 個人履歷網站<br>
-&nbsp;&nbsp;<span style="font-size:1.2vw;">製作</span><br><br>
-中原宗教研究所圖書館<br>
-&nbsp;&nbsp;<span style="font-size:1.2vw;">圖書管理</span><br><br>
+<blockquote style="font-size:1.2vw;">製作</blockquote><br>
 勤讀標竿獎<br>
 </div>
 </div>
@@ -133,7 +131,7 @@ Java專科優易獎<br>
 <p>調味牛奶進出貨系統</p>
 <blockquote>&nbsp;&nbsp;頗有難度的一次挑戰，算是第一次用Java實作出介面，使用了多種演算法。可惜檔案是.jar並不是所有電腦都能運行，下次必須注意。</blockquote>
 </div>
-<h3>html</h3>
+<h3>Web</h3>
 <div class="the">
 <img src="image/crown.PNG" title="點擊放大" onclick="o(1);"/>
 <p>初次網站實作</p>
@@ -159,14 +157,16 @@ Java專科優易獎<br>
 
 <div class="top"></div>
 <div class="bottom"></div>
+
 <div class="call">
 <form method="post" action="mailto:zx24969557@gmail.com.tw">
 <table height="100%" width="100%">
 <tr>
-<td style="vertical-align:bottom;">
-<fieldset style="height:13vw;">
-<span style="font-size:1vw;">Name:  </span><input type="text" size="15"/><br><br>
-<textarea style="resize:none;width:100%;height:6vw;"> </textarea><br><br>
+<td valign="top">
+<fieldset>
+<span style="font-size:1vw;">Name:  </span><input type="text" size="12"/><br><br>
+<textarea style="resize:none;width:90%;height:6vw;"> </textarea>
+
 <input class="button" type="submit" value="送出"/>
 </fieldset>
 </td>
@@ -174,21 +174,24 @@ Java專科優易獎<br>
 </table>
 </form>
 </div>
+
+
 <div class="callimg">
-<p class="calltext">CALL</p>
 </div>
+
 <div class="me">
 <h1>徐千蓉</h1>
-<p style="margin-top:-1vw;">“面對困難，<br><span style="float:right;">要不哭，要不笑。”</span><br>
-<blockquote style="margin:1vw 2vw;font-style:italic;font-size:1vw;">I'm currently a sophomore at Chung Yuan Christian University, major in Department of Information Management.</blockquote></p>
-<br>
-<a href="https://arlan95220.github.io/Arlan/"target="_blank" class="web" style="margin-top:-1vw;">My Website ></a>
-<a href="https://www.facebook.com/profile.php?id=100002465299539" target="_blank"style="margin-right:-0.5vw;"><img src="image/fb.png"/></a>
-<br><br>
-<a href="https://www.instagram.com/resouer95220/?hl=zh-tw" target="_blank"><img src="image/ig.PNG"/></a>
+<p style="margin-top:-1vw;">“面對困難，<br><span style="float:right;">要不哭，要不笑。”</span></p>
+<blockquote style="margin:3vw 2vw 1vw 2vw;font-style:italic;font-size:1vw;">I'm currently a sophomore at Chung Yuan Christian University, major in Department of Information Management.</blockquote>
+
+<a href=
+"https://www.facebook.com/profile.php?id=100002465299539" target="_blank"style="margin-right:-0.5vw;"><img src="image/fb.png"/></a>
+
+<a href="https://www.instagram.com/resouer95220/?hl=zh-tw" target="_blank" style=""><img src="image/ig.PNG"/></a>
+
+<a href="https://arlan95220.github.io/Arlan/"target="_blank" class="web" style="margin-top:0vw;">My Website ></a>
 </div>
-<div id="bigimg" style="width:100%;height:100%;background:#000000e5;position:fixed;z-index:15;">
-<button onclick="x();">X</button>
+<div id="bigimg" onclick="x();" style="">
 <br><br>
 <img src="image/java.PNG" id="big"/>
 </div>
